<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@drawable/toolbar_header"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">
                    <ImageView
                        android:id="@+id/menu"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@drawable/ic_baseline_menu"
                        android:contentDescription="@string/menu"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hello_lamya"
                        android:layout_toEndOf="@+id/menu"
                        android:textSize="25sp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="@color/colorWhite"/>

                    <androidx.appcompat.widget.SearchView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@+id/menu"
                        android:padding="10dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/background" />


                </RelativeLayout>

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alignmentMode="alignMargins"
                    android:columnOrderPreserved="true"
                    android:rowCount="3"
                    android:columnCount="2">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="4dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">
                                <ImageView
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:src="@drawable/profile"
                                    android:contentDescription="@string/profile"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="12dp"
                                    android:text="@string/profile"
                                    android:textColor="@color/textColor"
                                    android:textSize="18sp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="4dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">
                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/edit"
                                android:contentDescription="@string/edit"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/edit"
                                android:textColor="@color/textColor"
                                android:textSize="18sp"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="4dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">
                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/play"
                                android:contentDescription="@string/play"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/play"
                                android:textColor="@color/textColor"
                                android:textSize="18sp"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="4dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">
                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/setting"
                                android:contentDescription="@string/setting"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/setting"
                                android:textColor="@color/textColor"
                                android:textSize="18sp"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="4dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">
                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/library"
                                android:contentDescription="@string/library"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/library"
                                android:textColor="@color/textColor"
                                android:textSize="18sp"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="4dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">
                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/logout"
                                android:contentDescription="@string/log_out"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/log_out"
                                android:textColor="@color/textColor"
                                android:textSize="18sp"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </GridLayout>

               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="15dp"
                   android:layout_marginTop="5dp"
                   android:background="@drawable/bottom_card"
                   >
                   <TextView
                       android:id="@+id/trending"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:background="@drawable/background"
                       android:paddingLeft="10dp"
                       android:paddingRight="10dp"
                       android:text="@string/trending"
                       android:textSize="20sp"
                       android:textColor="@color/textColor"
                   />
                   <ImageView
                       android:layout_width="30dp"
                       android:layout_height="30dp"
                       android:src="@drawable/ic_baseline_favorite"
                       android:layout_alignEnd="@+id/trending"
                       android:layout_alignParentEnd="true"
                       android:contentDescription="@string/like" />
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_below="@+id/trending"
                       android:layout_marginTop="10dp"
                       android:ellipsize="end"
                       android:maxLines="3"
                       android:text="@string/lorem_ipsum_or_lipsum_as_it_is_sometimes_known_is_dummy_text_used_in_laying_out_print_graphic_or_web_designs"
                       android:textSize="17sp"
                       android:textColor="@color/colorWhite"/>
               </RelativeLayout>

            </LinearLayout>
    </ScrollView>
</RelativeLayout>